resources/css/style.css
/* General Styling Rules */

html {
    font-family: Helvetica, Arial, sans-serif;
    font-size: 22px;
    color: seashell;
    background-color: #000;
    text-align: center;
    opacity: .9;
}

.flex-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

a {
    color: seashell
}

/* Header Styling */

header {
    align-items: center;
    position: fixed;
    width: 100%;
    height: 69px;
    background-color: #000;
    border-bottom: 1px solid seashell;
    z-index: 1;
    top: 0;
}

header img {
    height: 50px;
    padding-left: 10px;
}


header nav {
    text-align: right;
    flex-grow: 1;
}

nav span {
    display: inline-block;
    padding: 20px 10px;
}


/* Landing Section Styling */

.landing-section {
    justify-content: center;
    align-items: center;
    margin: 70px auto 0px;
    background-image: url(../images/img-mission-background.jpg);
    height: 700px;
    width: 1200px;
}

.mission-statement {
    background-color: #000;
    width: 100%;
}

/* Tea of the Month Styling */

.card {
    padding: 0px 15px;
}

.card h4 {
    margin: 10px 0px 30px 0px;
}

.card img {
    height: 200px;
    width: 300px;
}

/* Locations Styling */

#locations {
    padding-top: 70px;
    background-image: url(../images/img-locations-background.jpg);
    height: 500px;
    width: 1200px;
}

#locations h3 {
    margin-bottom: 15px;
}

.locations {
    margin: auto;
}

.location-card {
    margin: 0px 20px;
    background-color: #000;
    width: 300px;
    opacity: 1;
}


/* Footer Styling */

footer {
    height: 200px;
}

#copyright {
    text-align: left;
    padding-left: 20px;
}

